--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,7 @@ allprojects {
             url 'https://github.com/uPhyca/stetho-realm/raw/master/maven-repo'
         }
         maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
 
